Update README.md
maxPermSize is obsolete - removed